--- a/ParkCar/package.json
+++ b/ParkCar/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.3",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
