--- a/ParkCar/package.json
+++ b/ParkCar/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-elements": "^3.4.3",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "tailwind-react-native-classnames": "^1.5.1"
   },
