--- a/ParkCar/package.json
+++ b/ParkCar/package.json
@@ -10,13 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.4",
+    "@react-navigation/stack": "^6.3.14",
     "@reduxjs/toolkit": "^1.9.2",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "tailwind-react-native-classnames": "^1.5.1"
