--- a/ParkCar/package.json
+++ b/ParkCar/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.71.3",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-vector-icons": "^9.2.0",
@@ -39,6 +40,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.7",
     "prettier": "^2.4.1",
+    "react-native-dotenv": "^3.4.7",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
