--- a/ParkCar/android/app/src/main/AndroidManifest.xml
+++ b/ParkCar/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+      <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="KEY"
+      />
       android:name=".MainApplication"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
