--- a/ParkCar/android/app/src/main/AndroidManifest.xml
+++ b/ParkCar/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
       android:theme="@style/AppTheme">
       <meta-data
         android:name="com.google.android.geo.API_KEY"
-        android:value="KEY"
+        android:value="AIzaSyAj1B2GTGlSm79Rpz60k0HuFOr1yuuLd8c"
       />
       <activity
         android:name=".MainActivity"
