--- a/ParkCar/package.json
+++ b/ParkCar/package.json
@@ -17,6 +17,7 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-config": "^1.5.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-google-places-autocomplete": "^2.5.1",
