--- a/ParkCar/package.json
+++ b/ParkCar/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.14",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/stack": "^6.3.14",
     "@reduxjs/toolkit": "^1.9.2",
